# cube

./: .gitignore  LICENSE  README.md  mofang.py
.github/workflows/: publish-crate-cli.yml  publish-crate-lib.yml  publish-nonebot.yml  publish-npm.yml  publish-pypi.yml  release-cli.yml
bindings/node/: .gitignore  Cargo.toml  READMD.md  example.mjs  index.d.ts  index.js  package.json
bindings/node/__test__/: index.spec.mjs
bindings/node/npm/android-arm64/: README.md  package.json
bindings/node/npm/darwin-arm64/: README.md  package.json
bindings/node/npm/darwin-x64/: README.md  package.json
bindings/node/npm/linux-arm64-gnu/: README.md  package.json
bindings/node/npm/linux-arm64-musl/: README.md  package.json
bindings/node/npm/linux-x64-gnu/: README.md  package.json
bindings/node/npm/linux-x64-musl/: README.md  package.json
bindings/node/npm/win32-arm64-msvc/: README.md  package.json
bindings/node/npm/win32-x64-msvc/: README.md  package.json
bindings/node/src/: lib.rs
bindings/python/: .gitignore  Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
cube-lib/: .gitignore  Cargo.toml  readme.md
cube-lib/src/: lib.rs  resvg.rs  types.rs  utils.rs
nonebot-plugin-cube/: README.md  pyproject.toml
nonebot-plugin-cube/nonebot_plugin_cube/: __init__.py  rank.py  render.py
nonebot_plugin_cube/: __init__.py
