[package]
name = "cube-lib"
version = "0.2.2"
edition = "2021"

authors = ["inintencunter <2911583893@qq.com>"]
include = [
    "readme.md",
    "src",
    "Cargo.toml",
]
description = "魔方 核心库"
homepage = "https://github.com/initialencounter/cube"
readme = "readme.md"
keywords = [
    "cube",
    "game",
    "cube-lib",
]
license = "AGPL-3.0"
repository = "https://github.com/initialencounter/cube"

[dependencies]
rand = "0.8.5"
resvg = "0.43.0"

once_cell = "1.19.0"
base64 = "0.22.1"
